feat: improve Makefile automation, fix swag generation and fully document API endpoints
