# backend/internal/http/handlers/system.go
@@ -19,31 +19,35 @@ func (h *SystemHandler) SetReady(v bool) {
 }
 
 // HealthCheck godoc
-// @Summary Health check
-// @Description Returns OK if service is alive
-// @Tags system
-// @Success 200 {object} map[string]string
-// @Router /hc [get]
+// @Summary      Health check
+// @Description  Returns OK if service is alive
+// @Tags         system
+// @Produce      plain
+// @Success      200 {string} string "OK"
+// @Router       /hc [get]
 func (h *SystemHandler) HealthCheck(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte("OK"))
 }
 
 // LivenessCheck godoc
-// @Summary Liveness check
-// @Tags system
-// @Success 200 {object} map[string]string
-// @Router /lc [get]
+// @Summary      Liveness check
+// @Tags         system
+// @Produce      plain
+// @Success      200 {string} string "ALIVE"
+// @Router       /lc [get]
 func (h *SystemHandler) LivenessCheck(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte("ALIVE"))
 }
 
 // ReadinessCheck godoc
-// @Summary Readiness check
-// @Tags system
-// @Success 200 {object} map[string]string
-// @Router /rc [get]
+// @Summary      Readiness check
+// @Tags         system
+// @Produce      plain
+// @Success      200 {string} string "READY"
+// @Failure      503 {string} string "NOT READY"
+// @Router       /rc [get]
 func (h *SystemHandler) ReadinessCheck(w http.ResponseWriter, r *http.Request) {
 	if !h.ready {
 		w.WriteHeader(http.StatusServiceUnavailable)
